Fix the spacing on the hero section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -409,7 +409,7 @@ $value in $colors {
 *******************/
 
 .hero-section {
-    padding-top: 128px;
+    padding-top: 48px;
     padding-bottom: 0;
     overflow: hidden;
 }
